--- a/myvenv/events_jobs/apps/core/templates/job_detail.html
+++ b/myvenv/events_jobs/apps/core/templates/job_detail.html
@@ -1,23 +1,30 @@
 {% extends 'base.html' %}
 {% block content %}
-    <h1 class="title">{{job.title}} ({{ job.get_status_display }}) </h1>
-    <p class="is-size-4">{{job.short_description}}</p>
-    <p>{{job.long_description}}</p>
 
-    <p>{{job.long_description}}</p>
-    <b>Company name: </b> {{job.company_name}}<br>
-    {% if job.company_address %}<b>Company address: </b>{{job.company_address}}<br>{% endif %}
-    {% if job.company_zipcode %}<b>Company zipcode: </b>{{job.company_zipcode}}<br>{% endif %}
-    {% if job.company_place %}<b>Company place: </b>{{job.company_place}}<br>{% endif %}
-    {% if job.company_country %}<b>Company country: </b>{{job.company_country}}<br>{% endif %}
-    <b>Company size: </b>{{job.get_company_size_display}}<br>
 
-    <hr>
+<section class="tm-section">
+    <div class="tm-content-container">
+        <div class="tm-content">
+            <h1 class="title">{{job.title}} ({{ job.get_status_display }}) </h1>
+            <p class="is-size-4">{{job.short_description}}</p>
+            <p>{{job.long_description}}</p>
 
-    {% if job.status == 'active' %}
-        <a href="{% url 'apply_for_job' job.id %}" class="button is-success">Apply for Job</a>
-    {% else %}
-        <p>This job is closed</p>
-    {% endif %}
-    
+            <p>{{job.long_description}}</p>
+            <b>Company name: </b> {{job.company_name}}<br>
+            {% if job.company_address %}<b>Company address: </b>{{job.company_address}}<br>{% endif %}
+            {% if job.company_zipcode %}<b>Company zipcode: </b>{{job.company_zipcode}}<br>{% endif %}
+            {% if job.company_place %}<b>Company place: </b>{{job.company_place}}<br>{% endif %}
+            {% if job.company_country %}<b>Company country: </b>{{job.company_country}}<br>{% endif %}
+            <b>Company size: </b>{{job.get_company_size_display}}<br>
+
+            <hr>
+
+            {% if job.status == 'active' %}
+            <a href="{% url 'apply_for_job' job.id %}" class="button is-success">Apply for Job</a>
+            {% else %}
+            <p>This job is closed</p>
+            {% endif %}
+        </div>
+    </div>
+</section>
 {% endblock %}
