--- a/myvenv/events_jobs/apps/core/templates/login.html
+++ b/myvenv/events_jobs/apps/core/templates/login.html
@@ -3,39 +3,42 @@
 {%load static %}
 
 {% block content %}
-    <div class="container" id="registerContainer">
-        <div class="columns">
-            <div class="column is-12-mobile is-6-tablet is-6-desktop has-text-centered"> <!-- Center  -->
-                <h1 class="title" id="titleHeader">Login </h1>
-                <form method="post" action=".">
-                    {% csrf_token %} <!--built in security-->
-                    
-                    {% for non_field_error in form.non_field.errors %}
-                        <p class="help is-danger">{{ non_field_error }}</p>
-                    {% endfor %}
+<div class="container" id="registerContainer">
+    <div class="columns">
+        <div class="column is-12-mobile is-6-tablet is-6-desktop has-text-centered">
+            <!-- Center  -->
 
-                    {% for field in form %}
-                        <div class="field">
-                            <label for="{{ field.id_for_label }}" class="label" id="formHeaders">
-                                {{ field.label_tag}}
-                            </label>
-                            {{ field }}
+            <h1 class="title" id="titleHeader">Login </h1>
+            <form method="post" action=".">
+                {% csrf_token %}
+                <!--built in security-->
 
-                            {% for error in field.errors %}
-                                <p class="help is-danger" id="errorHeader">{{ error }}</p>
-                            {% endfor %}
-                        </div>
+                {% for non_field_error in form.non_field.errors %}
+                <p class="help is-danger">{{ non_field_error }}</p>
+                {% endfor %}
+
+                {% for field in form %}
+                <div class="field">
+                    <label for="{{ field.id_for_label }}" class="label" id="formHeaders">
+                        {{ field.label_tag}}
+                    </label>
+                    {{ field }}
+
+                    {% for error in field.errors %}
+                    <p class="help is-danger" id="errorHeader">{{ error }}</p>
                     {% endfor %}
-                    <div class="field">
-                        <div class="control">
-                            <button class="button is-primary" id="register">Login</button>
-                        </div>
+                </div>
+                {% endfor %}
+                <div class="field">
+                    <div class="control">
+                        <button class="button is-primary" id="register">Login</button>
                     </div>
-                </form>
-            </div>
-            <div class="column is-12-mobile is-6-tablet is-6-desktop">
-                <img src="{% static 'images/sign.svg' %}" class="pic"  alt="">
-            </div>
+                </div>
+            </form>
+        </div>
+        <div class="column is-12-mobile is-6-tablet is-6-desktop">
+            <img src="{% static 'images/sign.svg' %}" class="pic" alt="">
         </div>
     </div>
+</div>
 {% endblock %}
