--- a/myvenv/events_jobs/apps/userprofile/templates/dashboard.html
+++ b/myvenv/events_jobs/apps/userprofile/templates/dashboard.html
@@ -1,33 +1,43 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h1 class="title">Dashboard</h1>
+<section class="tm-section">
+    <div class="tm-content-container">
+        <div class="tm-content">
+            <h1 class="title">Dashboard</h1>
 
-    {% if userprofile.is_employer %}
-        <h2 class="subtitle">Jobs</h2>
+            {% if userprofile.is_employer %}
+            <h2 class="subtitle">Jobs</h2>
 
-        <a href="{% url 'add_job' %}" class="button is-success">Add Job</a>
+            <a href="{% url 'add_job' %}" class="button is-success">Add Job</a>
 
-        {% for job in request.user.jobs.all %}
+            {% for job in request.user.jobs.all %}
             <!-- Get jobs if any  -->
+
             <div class="job">
                 <a href="{% url 'view_dashboard_job' job.id %}">{{job.title}} ({{job.get_status_display}})</a>
             </div>
-        {% empty %}
+            {% empty %}
             <p>You dont have any jobs yet</p>
-        {% endfor %}
-    {% else %}
-        <h2 class="subtitle">Applied Applications</h2>
+            {% endfor %}
+            {% else %}
+            <h2 class="subtitle">Applied Applications</h2>
 
-        {% for application in request.user.applications.all %}
-            <div class="application">
-                <a href="{% url 'view_application' application.id %}">{{ application.job.title }}</a>
+            {% for application in request.user.applications.all %}
+
+            <div class="tm-content-1">
+                <div class="application">
+                    <a href="{% url 'view_application' application.id %}">{{ application.job.title }}</a>
+                </div>
             </div>
-        {% empty %}
+
+            {% empty %}
             <p>You haven't applied for any jobs yet</p>
 
-        {% endfor %}
+            {% endfor %}
 
-    {% endif %}
-
+            {% endif %}
+        </div>
+    </div>
+</section>
 {% endblock %}
