--- a/myvenv/events_jobs/apps/core/templates/base.html
+++ b/myvenv/events_jobs/apps/core/templates/base.html
@@ -74,7 +74,7 @@
     {% block scripts %}
     {% endblock %}
 
-    <!-- Footer -->
+    <!-- Footer Added -->
     <div class="footer-dark">
         <footer>
             <div class="container">
