--- a/myvenv/events_jobs/apps/core/templates/base.html
+++ b/myvenv/events_jobs/apps/core/templates/base.html
@@ -75,40 +75,21 @@
     {% endblock %}
 
     <!-- Footer Added -->
-    <div class="footer-dark">
-        <footer>
-            <div class="container">
-                <div class="row">
-                    <div class="col-sm-6 col-md-3 item">
-                        <h3>Services</h3>
-                        <ul>
-                            <li><a href="#">Web design</a></li>
-                            <li><a href="#">Development</a></li>
-                            <li><a href="#">Hosting</a></li>
-                        </ul>
+    <div class='desktop-content'>
+        <div class='flexible-container fixed-bottom'>
+            <div class='row h-50' id='footer'>
+                <div
+                    class='text-nowrap col-12 d-flex flex-row align-content-center align-items-center justify-content-between'>
+                    <div id='footer-item'>
+                        <a href="#" id='footer-item'
+                            class='inline-block text-decoration-none pl-5 fa fa-angle-left fa-lg'><a href="#"
+                                id='footer-item' class='pl-2 text-decoration-none'>Copyright @ 2021</a></a>
                     </div>
-                    <div class="col-sm-6 col-md-3 item">
-                        <h3>About</h3>
-                        <ul>
-                            <li><a href="#">Company</a></li>
-                            <li><a href="#">Team</a></li>
-                            <li><a href="#">Careers</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-md-6 item text">
-                        <h3>Company Name</h3>
-                        <p>Praesent sed lobortis mi. Suspendisse vel placerat ligula. Vivamus ac sem lacus. Ut vehicula
-                            rhoncus elementum. Etiam quis tristique lectus. Aliquam in arcu eget velit pulvinar dictum
-                            vel in justo.</p>
-                    </div>
-                    <div class="col item social"><a href="#"><i class="icon ion-social-facebook"></i></a><a href="#"><i
-                                class="icon ion-social-twitter"></i></a><a href="#"><i
-                                class="icon ion-social-snapchat"></i></a><a href="#"><i
-                                class="icon ion-social-instagram"></i></a></div>
+                    <a href="#" id='footer-item' class='inline-block pr-5 text-decoration-none'>Made with ❤️ by Team
+                        2.</a>
                 </div>
-                <p class="copyright">Company Name © 2018</p>
             </div>
-        </footer>
+        </div>
     </div>
     <!-- Footer -->
 
