--- a/myvenv/events_jobs/apps/core/templates/edit_job.html
+++ b/myvenv/events_jobs/apps/core/templates/edit_job.html
@@ -42,6 +42,13 @@
             </div>
 
             <div class="field">
+                <label>Job Posting</label>
+                <div class="control">
+                    <input class="input" type="text" name="job_post" id="id_job_post" v-model="job_post">
+                </div>
+            </div>
+
+            <div class="field">
                 <label>Company name</label>
                 <div class="control">
                     <input class="input" type="text" name="company_name" id="id_company_name" v-model="company_name">
@@ -50,30 +57,9 @@
 
             
             <div class="field">
-                <label>Company address</label>
+                <label>Job address</label>
                 <div class="control">
                     <input class="input" type="text" name="company_address" id="id_company_address" value="{% if job.company_address %}{{ job.company_address }}{% endif %}">
-                </div>
-            </div>
-
-            <div class="field">
-                <label>Company zipcode</label>
-                <div class="control">
-                    <input class="input" type="text" name="company_zipcode" id="id_company_zipcode" value="{% if job.company_zipcode %}{{ job.company_zipcode }}{% endif %}">
-                </div>
-            </div>
-
-            <div class="field">
-                <label>Company place</label>
-                <div class="control">
-                    <input class="input" type="text" name="company_place" id="id_company_place" value="{% if job.company_place %}{{ job.company_place }}{% endif %}">
-                </div>
-            </div>
-
-            <div class="field">
-                <label>Company country</label>
-                <div class="control">
-                    <input class="input" type="text" name="company_country" id="id_company_country" value="{% if job.company_country %}{{ job.company_country }}{% endif %}">
                 </div>
             </div>
 
@@ -107,7 +93,7 @@
 
             <div class="field">
                 <div class="control">
-                    <button class="button is-success">Save changes</button>
+                    <button class="button is-info" id="register">Save changes</button>
                 </div>
             </div>
         </form>
@@ -123,6 +109,7 @@
                 title: '{{ job.title }}',
                 company_name: '{{ job.company_name }}',
                 short_description: '{{ job.short_description }}',
+                job_post: '{{ job.job_post }}',
                 company_size: '{{ job.company_size }}',
                 errors: []
             }
@@ -142,6 +129,9 @@
                 }
                 if(this.company_size === ''){
                     this.errors.push('The company size field is missing')
+                }
+                if(this.job_post === ''){
+                    this.errors.push('The job posting field is missing')
                 }
                 if(this.errors.length) {
                     // Form wont be submitted if there are any errors
