--- a/myvenv/events_jobs/apps/core/static/css/main.css
+++ b/myvenv/events_jobs/apps/core/static/css/main.css
@@ -14,7 +14,7 @@
   padding: 0;
   box-sizing: border-box;
   text-decoration: none;
-  text-transform: capitalize;
+  text-transform: none;
 }
 
 /* ::selection {
@@ -201,3 +201,6 @@ body {
 }
 
 /* Jobs end */
+#dashBtn {
+  background-color: saddlebrown;
+}
