--- a/myvenv/events_jobs/apps/core/templates/base.html
+++ b/myvenv/events_jobs/apps/core/templates/base.html
@@ -9,7 +9,6 @@
     <!--Styles-->
     <link rel="stylesheet" type="text/css" href="{% static '/css/main.css' %}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,600" />
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css'>
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css'>
     <link rel="stylesheet" href="{% static '/css/bootstrap.min.css' %}">
@@ -19,7 +18,7 @@
 
 <body>
     <!--Navbar-->
-    <nav class="navbar has-shadow is-white" role="navigation" aria-label="main navigation">
+    <nav class="navbar is-white" role="navigation" aria-label="main navigation">
         <div class="navbar-brand">
             <a href="{%url 'landing_page' %}" class="navbar-item" style="font-weight:bold;">Events Board</a>
 
@@ -74,24 +73,9 @@
     {% block scripts %}
     {% endblock %}
 
-    <!-- Footer Added -->
-    <div class='desktop-content'>
-        <div class='flexible-container fixed-bottom'>
-            <div class='row h-50' id='footer'>
-                <div
-                    class='text-nowrap col-12 d-flex flex-row align-content-center align-items-center justify-content-between'>
-                    <div id='footer-item'>
-                        <a href="#" id='footer-item'
-                            class='inline-block text-decoration-none pl-5 fa fa-angle-left fa-lg'><a href="#"
-                                id='footer-item' class='pl-2 text-decoration-none'>Copyright @ 2021</a></a>
-                    </div>
-                    <a href="#" id='footer-item' class='inline-block pr-5 text-decoration-none'>Made with ❤️ by Team
-                        2.</a>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Footer -->
+ <!-- Footer Added -->
+
+<!-- Footer -->
 
 </body>
 
