--- a/myvenv/events_jobs/apps/core/templates/job_detail.html
+++ b/myvenv/events_jobs/apps/core/templates/job_detail.html
@@ -9,16 +9,14 @@
             <p class="is-size-4">{{job.short_description}}</p>
             <p>{{job.long_description}}</p>
             <b>Company name: </b> {{job.company_name}}<br>
-            {% if job.company_address %}<b>Company address: </b>{{job.company_address}}<br>{% endif %}
-            {% if job.company_zipcode %}<b>Company zipcode: </b>{{job.company_zipcode}}<br>{% endif %}
-            {% if job.company_place %}<b>Company place: </b>{{job.company_place}}<br>{% endif %}
-            {% if job.company_country %}<b>Company country: </b>{{job.company_country}}<br>{% endif %}
+            <b>Job Posting: </b> {{job.job_post}}<br>
+            {% if job.company_address %}<b>Job address: </b>{{job.company_address}}<br>{% endif %}
             <b>Company size: </b>{{job.get_company_size_display}}<br>
 
             <hr>
 
             {% if job.status == 'active' %}
-            <a href="{% url 'apply_for_job' job.id %}" class="button is-success">Apply for Job</a>
+            <a href="{% url 'apply_for_job' job.id %}" class="button is-info" id="register">Apply for Job</a>
             {% else %}
             <p>This job is closed</p>
             {% endif %}
